--- a/css/strategy.css
+++ b/css/strategy.css
@@ -1536,6 +1536,9 @@
 .share-create-line .item input {
   height: 30px;
   width: 180px;
+  padding: 3px 4px;
+  font-size: 14px;
+  line-height: 20px;
   background-color: #ffffff;
   border: none;
   outline: none;
@@ -1543,47 +1546,49 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003199}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003202}}
 .share-create-line .item .search {
   padding-left: 30px;
   background: #ffffff url(../img/icon/search.png) no-repeat 5px center;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003203}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003206}}
 .share-create-line .item .calendar {
   padding-right: 30px;
   background: #ffffff url(../img/icon/calendar.png) no-repeat right center;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003210}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003213}}
 .share-create-title input {
   background: #ffffff;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
-  line-height: 30px;
-  padding: 4px 3px;
   width: 100%;
+  padding: 3px 4px;
+  font-size: 14px;
+  line-height: 20px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003220}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003224}}
 .block-input {
   display: block;
   background: #ffffff;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
-  line-height: 30px;
-  padding: 4px 3px;
+  padding: 3px 4px;
+  font-size: 14px;
+  line-height: 20px;
   width: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003229}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003234}}
 .block-btn {
   display: block;
   -moz-border-radius: 5px;
@@ -1596,15 +1601,15 @@
   box-sizing: border-box;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003239}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003244}}
 .share-create-content .day-list .step-title {
   text-indent: 20px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003242}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003247}}
 .share-create-content .day-list .day-title {
   padding: 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003245}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003250}}
 .share-create-content .day-list .day-picture {
   position: relative;
   width: 400px;
@@ -1615,7 +1620,7 @@
   -webkit-border-radius: 5px;
   border-radius: 5px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003252}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003257}}
 .share-create-content .day-list .day-picture .add-pic {
   position: absolute;
   top: 50%;
@@ -1628,23 +1633,23 @@
   border: 1px solid;
   margin: -30px 0 0 -30px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003268}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003271}}
 .share-create-content .day-list .day-text .day-textarea {
   padding: 3px;
   width: 400px;
   min-height: 150px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003276}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003279}}
 .share-create-btn {
   width: 200px;
   margin: 0 auto;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003279}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003282}}
 .share-create-btn input {
   margin: 10px 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003281}}
+@media -sass-debug-info{filename{font-family:file\:\/\/D\:\/www\/project\/afa\/build\/sass\/strategy\.scss}line{font-family:\00003284}}
 .share-create-btn input.b {
   background: #0d6396;
 }
