--- a/view/_partial/slidebar.html
+++ b/view/_partial/slidebar.html
@@ -4,7 +4,7 @@
     <li><a href="./find_line.html" class="active">找路线</a></li>
     <li><a href="./find_strategy.html" class="active">找攻略</a></li>
     <li><a href="./find_line.html" class="active">定制吧</a></li>
-    <li><a href="./find_line.html" class="active">找同伴</a></li>
+    <li><a href="./find_companion.html" class="active">找同伴</a></li>
     <li><a href="./find_line.html" class="active">找领队</a></li>
     <li><a href="./find_line.html" class="active">找装备</a></li>
     <li><a href="./find_line.html" class="active">找知识</a></li>
